--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -10,7 +10,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addButton"
-        android:layout_width="36dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
         android:layout_margin="@dimen/fab_margin"
