--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,15 +1,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:columnCount="2"
         android:useDefaultMargins="true">
-
 
         <TextView
             android:id="@+id/nameLabelTextView"
@@ -18,7 +16,7 @@
             android:layout_column="0"
             android:layout_row="0"
             android:text="@string/label_name"
-            android:theme="@style/ContactLabelTextView"/>
+            style="@style/ContactLabelTextView"/>
 
         <TextView
             android:id="@+id/phoneLabelTextView"
@@ -26,8 +24,8 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="1"
-            android:theme="@style/ContactLabelTextView"
-            android:text="@string/label_phone"/>
+            android:text="@string/label_phone"
+            style="@style/ContactLabelTextView"/>
 
         <TextView
             android:id="@+id/emailLabelTextView"
@@ -35,8 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_column="0"
             android:layout_row="2"
-            android:theme="@style/ContactLabelTextView"
-            android:text="@string/label_email"/>
+            android:text="@string/label_email"
+            style="@style/ContactLabelTextView"/>
 
         <TextView
             android:id="@+id/nameTextView"
@@ -44,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="0"
-            android:theme="@style/ContactTextView"/>
+            style="@style/ContactTextView"/>
 
 
         <TextView
@@ -53,16 +51,16 @@
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="1"
-            android:theme="@style/ContactTextView"/>
+            style="@style/ContactTextView"/>
 
 
         <TextView
             android:id="@+id/emailTextView"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_column="1"
             android:layout_row="2"
-            android:theme="@style/ContactTextView"/>
+            style="@style/ContactTextView"/>
 
     </GridLayout>
 
