--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,5 @@
         android:id="@+id/actionAbout"
         android:orderInCategory="100"
         android:title="@string/menu_about"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
 </menu>
