--- a/app/src/main/res/layout/fragment_add_edit.xml
+++ b/app/src/main/res/layout/fragment_add_edit.xml
@@ -14,14 +14,14 @@
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/nameTextInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/nameTextInputLayout">
+                android:layout_height="wrap_content">
 
                 <EditText
+                    android:id="@+id/etName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editText"
                     android:hint="@string/hint_name_required"
                     android:imeOptions="actionNext"
                     android:inputType="textCapWords|textPersonName"/>
@@ -29,14 +29,14 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/phoneTextInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/phoneTextInputLayout">
+                android:layout_height="wrap_content">
 
                 <EditText
+                    android:id="@+id/etPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editText2"
                     android:hint="@string/hint_phone"
                     android:imeOptions="actionNext"
                     android:inputType="phone"/>
@@ -44,14 +44,14 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/emailTextInputLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/emailTextInputLayout">
+                android:layout_height="wrap_content">
 
                 <EditText
+                    android:id="@+id/etEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/editText3"
                     android:hint="@string/hint_email"
                     android:imeOptions="actionDone"
                     android:inputType="textWebEmailAddress"/>
